fix color in compare operators/functions