@@ -191,7 +191,7 @@ public class Tokenizer {
             throw new IllegalStateException("More then one operator matched the input %s: %s".formatted(input, maxLengthMatches.stream().map(Match::token).map(Token::toString).toList()));
         }
 
-        return Optional.of(maxLengthMatches.get(0));
+        return Optional.of(maxLengthMatches.getFirst());
     }
 
     private List<Match> getAllMatches(String input) throws ExpressionException {
