@@ -14,7 +14,7 @@ public class IfGreater extends AbstractIf {
     protected boolean compare(Roll input, int inputPosition, Roll compareTo, int compareToPosition) throws ExpressionException {
         checkContainsSingleElement(getName(), input, "%d argument".formatted(inputPosition));
         checkContainsSingleElement(getName(), compareTo, "%d argument".formatted(compareToPosition));
-        return input.getElements().get(0).compareTo(compareTo.getElements().get(0)) > 0;
+        return input.getElements().getFirst().compareTo(compareTo.getElements().getFirst()) > 0;
     }
 
 }
